<resources>
    <string name="app_name">FamilyTree</string>
    <string name="title_activity_family_tree_view">FamilyTreeView</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Family Tree</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="new_family_member">New Family member</string>
    <string name="first_family_member">First Family member</string>

    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="create_the_first_family_member">Create the first family member!</string>
    <string name="details">Details</string>
    <string name="father">Father</string>
    <string name="mother">Mother</string>
    <string name="sister">Sister</string>
    <string name="brother">Brother</string>
    <string name="daughter">Daughter</string>
    <string name="son">Son</string>
    <string name="wife">Wife</string>
    <string name="husband">Husband</string>
    <string name="logout">Logout</string>
    <string name="choose_your_gender">Choose his/her gender</string>
    <string name="male">male</string>
    <string name="female">female</string>

    <string-array name="category_items">
        <item>Mother</item>
        <item>Father</item>
        <item>Sister</item>
        <item>Brother</item>
        <item>Wife</item>
        <item>Husband</item>
        <item>Daughter</item>
        <item>Son</item>
    </string-array>

</resources>