<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/wrapper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_holo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
            android:id="@+id/FamilyMemberNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_your_gender" />

        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radiobtnboy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"/>

            <RadioButton
                android:id="@+id/radiobtngirl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"/>

        </RadioGroup>


    </LinearLayout>
</ScrollView>