<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/app_bar_family_tree">

        <ImageView
            android:id="@+id/delete"
            android:layout_width="55dp"
            android:layout_height="70dp"
            android:layout_marginStart="6dp"
            android:layout_marginBottom="6dp"
            android:background="@android:drawable/ic_menu_delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvData"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="16dp"
            android:background="#99264C49"
            android:fontFamily="sans-serif-medium"
            android:text="@string/create_the_first_family_member"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFFAFA"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonDetails"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:background="@drawable/button_background_details"
            android:text="@string/details"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.538" />

        <Button
            android:id="@+id/buttonFather"
            android:layout_width="115dp"
            android:layout_height="63dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="64dp"
            android:background="@drawable/button_background"
            android:text="@string/father"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonMother"
            android:layout_width="115dp"
            android:layout_height="63dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_background_female"
            android:text="@string/mother"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonSister"
            android:layout_width="115dp"
            android:layout_height="63dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="296dp"
            android:background="@drawable/button_background_female"
            android:text="@string/sister"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonBrother"
            android:layout_width="115dp"
            android:layout_height="63dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="244dp"
            android:background="@drawable/button_background"
            android:text="@string/brother"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonDaughter"
            android:layout_width="115dp"
            android:layout_height="63dp"
            android:layout_marginStart="64dp"
            android:layout_marginBottom="84dp"
            android:background="@drawable/button_background_female"
            android:text="@string/daughter"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonSon"
            android:layout_width="115dp"
            android:layout_height="63dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="84dp"
            android:background="@drawable/button_background"
            android:text="@string/son"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/buttonWife"
            android:layout_width="115dp"
            android:layout_height="63dp"
            android:layout_marginTop="296dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_background_female"
            android:text="@string/wife"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonHusband"
            android:layout_width="115dp"
            android:layout_height="63dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="244dp"
            android:background="@drawable/button_background"
            android:text="@string/husband"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>